# RoboMaster-University-AI-Challenge-with-RL

./: .gitignore  eRL_demo_SingleFilePPO.py  readme.md  setup.py  train.py
elegantrl/envs/: Gym.py  IsaacGym_OLD.py
elegantrl/train/: config.py  demo_old.py  evaluator.py
elegantrl_dq/agents/: AgentPPO.py  model_pool.py  net.py
elegantrl_dq/envs/: env.py
elegantrl_dq/train/: evaluator.py  replay_buffer.py  run.py
elegantrl_dq/utils/: process_log.py
output/2022-03-27_23-25-44/: actor.pth  actor_step:0.pth  actor_step:0_best.pth  actor_step:10022912_best.pth  actor_step:10047488.pth  actor_step:10170368.pth  actor_step:10293248.pth  actor_step:10416128.pth  actor_step:10539008.pth  actor_step:10661888.pth  actor_step:10784768.pth  actor_step:10907648.pth  actor_step:1101824.pth  actor_step:11030528.pth  actor_step:11153408.pth  actor_step:11276288.pth  actor_step:11399168.pth  actor_step:11522048.pth  actor_step:11644928.pth  actor_step:1175552_best.pth  actor_step:11767808.pth  (+330 more)
python_scripts/: demo.py  demo_dq.py
robomaster2D/: setup.py
robomaster2D/robomaster2D/path_planning/: CMakeLists.txt
robomaster2D/robomaster2D/path_planning/include/: Map.h  astar.hpp  build_map.h  build_map.hpp  dstarlite.h  global_planning.h  lookahead.hpp  navigation.h  navigation.hpp  planning.hpp  robot.hpp  smooth.hpp
robomaster2D/robomaster2D/path_planning/src/: astar.cpp  build_map.cpp  lookahead.cpp  main.cpp  navigation.cpp  planning.cpp  robot.cpp  simulator_interface.cpp  smooth.cpp
scripts/: demo.py
src/: logx.py  plot.py  plot2.py  simulator_interface.cpp
(+4013 files in other folders)
